--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body, html{
     flex-direction: row;
     display: grid;
     text-align: center;
-    
+    font-size: xx-large;
 }
 
 .img-header{
@@ -35,7 +35,7 @@ body, html{
 
 .img-link{
     margin: auto;
-    width: 1%;
+    width: 2%;
     
 }
 
